fix: contrast on contact.html

--- a/style.css
+++ b/style.css
@@ -771,7 +771,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: rgb(223, 54, 2);
+    background-color: rgb(211, 34, 2);
 }
 
 .tc-white {
